possible to modify tournament hcp